--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/data"]
 	path = tests/data
-	url = git://github.com/maxmind/MaxMind-DB.git
+	url = https://github.com/maxmind/MaxMind-DB
